# Multimodal-socratic-tutor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/: socratot.db
data/processed/chroma_db/705dd932-afd8-4e72-9768-bf5931a8f292/: index_metadata.pickle
scripts/: ingest_corpus.py  setup.py
src/app/: main.py  sidebar.py
src/app/views/: _charts.py  assessment.py  chat.py  dashboard.py  evaluation_dashboard.py  image_analysis.py  settings_page.py
src/app/views/chat/: composer.py  engine.py  message.py  page.py  topbar.py
src/config/: prompts.yaml  settings.py  topics.yaml
src/core/assessment/: mastery_tracker.py  reasoning_evaluator.py  scenario_generator.py
src/core/audio/: audio_service.py
src/core/conversation/: evaluator.py  manager.py  response.py  session_store.py  socratic_engine.py  state.py  topic_detector.py
src/core/memory/: memory_manager.py  student_memory.py
src/core/multimodal/: pipeline.py  question_generator.py  vision_analyzer.py
src/core/rag/: _guard_utils.py  chunker.py  embedder.py  hallucination_guard.py  hybrid_retriever.py  pipeline.py  retriever.py  vector_store.py
src/core/rag/stores/: __init__.py  base.py  chroma.py  faiss.py
src/evaluation/: _metrics.py  baseline_evaluator.py  compliance_evaluator.py  ground_truth.jsonl  plot_results.py  ragas_evaluator.py  run_evaluation.py
src/evaluation/results/: full_evaluation.json  ragas_scores.json
src/models/: embedding_model.py  llm_factory.py
src/prompts/: loader.py
src/schemas/: assessment.py  base.py  conversation.py  rag.py
src/utils/: exceptions.py  helpers.py  logger.py
tests/unit/: test_phase1.py  test_phase5.py
tests/unit/core/: test_phase2.py  test_phase3.py  test_phase4.py
